--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>機械手臂控制系統</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <style>
         #video-feed {
             width: 100%;
@@ -16,6 +17,14 @@
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <i class="bi bi-robot me-2"></i>
+                <strong>機械手臂控制系統</strong>
+            </a>
+        </div>
+    </nav>
     <div class="container">
         <h1 class="mt-4">機械手臂控制系統</h1>
         <div class="row">
@@ -27,7 +36,6 @@
                 <h3>控制</h3>
                 <button class="btn btn-success mb-2">啟動</button>
                 <button class="btn btn-danger mb-2">停止</button>
-                <button class="btn btn-info mb-2">除錯模式</button>
                 <h3 class="stats">物件統計</h3>
                 <table class="table">
                     <thead>
@@ -94,7 +102,6 @@
 
             document.querySelector('.btn-success').addEventListener('click', () => sendControl('start'));
             document.querySelector('.btn-danger').addEventListener('click', () => sendControl('stop'));
-            document.querySelector('.btn-info').addEventListener('click', () => sendControl('debug'));
         });
     </script>
 </body>
