--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet"/>
   <style>
     body {
+      font-family: 'DFKai-SB', '標楷體', serif;
       font-size: 1.5rem;
     }
     h1 {
