--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
           <img id="video-feed" src="" alt="攝影機影像">
         </div>
         <div class="col-md-4">
-          <h3>控制</h3>
+          <h3>機器控制</h3>
           <button class="btn btn-success mb-3">啟動</button>
           <button class="btn btn-danger mb-3">停止</button>
           <h3>物件統計</h3>
