--- a/public/index.html
+++ b/public/index.html
@@ -61,25 +61,25 @@
   <div class="container mt-4">
     <!-- 首頁 -->
     <div id="home" class="page active">
-      <h1>歡迎使用機械手臂控制系統</h1>
-      <p class="lead">本系統可即時顯示影像、統計各類物件數量，並透過按鈕遠端控制機械手臂運作。</p>
+      <h1 class="text-center">歡迎使用機械手臂控制系統</h1>
+      <p class="text-center">本系統可即時顯示影像、統計各類物件數量，並透過按鈕遠端控制機械手臂運作。</p>
       <ul>
-        <li>即時影像顯示</li>
-        <li>物件自動辨識與統計</li>
-        <li>啟動與停止機械手臂</li>
+        <h3 class="text-center">即時影像顯示</h3>
+        <h3 class="text-center">物件自動辨識與統計</h3>
+        <h3 class="text-center">啟動與停止機械手臂</h3>
       </ul>
     </div>
 
     <!-- 系統頁面 -->
     <div id="system" class="page">
-      <h1>控制系統介面</h1>
+      <h1 class="text-center">控制系統介面</h1>
       <div class="row">
         <div class="col-md-8">
           <h3>即時影像</h3>
           <img id="video-feed" src="" alt="攝影機影像">
         </div>
         <div class="col-md-4">
-          <h3>系統控制</h3>
+          <h3>機器控制</h3>
           <button class="btn btn-success mb-3">啟動</button>
           <button class="btn btn-danger mb-3">停止</button>
           <h3>物件統計</h3>
