--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>機械手臂控制系統</title>
+  <title style="text-align: center;">機械手臂控制系統</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet"/>
   <style>
@@ -37,6 +37,14 @@
     }
     .page.active {
       display: block;
+    }
+    .highlight-oval {
+      display: inline-block;
+      background-color: #ffe066;
+      border-radius: 50px;
+      padding: 0.5rem 1.5rem;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      margin-bottom: 2rem;
     }
   </style>
 </head>
@@ -72,14 +80,18 @@
 
     <!-- 系統頁面 -->
     <div id="system" class="page">
-      <h1 class="text-center">控制系統介面</h1>
+      <div class="text-center">
+        <div class="highlight-oval">
+          <h1 class="text-center m-0">控制系統介面</h1>
+        </div>
+      </div>
       <div class="row">
         <div class="col-md-8">
           <h3>即時影像</h3>
           <img id="video-feed" src="" alt="攝影機影像">
         </div>
         <div class="col-md-4">
-          <h3>機器控制</h3>
+          <h3>系統控制</h3>
           <button class="btn btn-success mb-3">啟動</button>
           <button class="btn btn-danger mb-3">停止</button>
           <h3>物件統計</h3>
